--- a/index.html
+++ b/index.html
@@ -19,21 +19,40 @@
           <div class="quick-links"><a href="#" class="links">Projects</a></div>
           <div class="quick-links"><a href="#" class="links">About</a></div>
           <div class="quick-links"><a href="#" class="links">Contact</a></div>
+        </div>
+        <div id="slider">
+          <div class="container_links">    
+          <div class="menus"><a href="#">Home</a></div>
+          <div class="menus"><a href="#">Projects</a></div>
+          <div class="menus"><a href="#">About</a></div>
+          <div class="menus"><a href="#">Contact</a></div></div>
+        </div>
+        <div class="lines_container">
+          <div class="lines"></div>
+          <div class="lines"></div>
+          <div class="lines"></div>
+        </div>
+        
+      </nav>
 
-          <div class="lines_container">
-            <div class="lines"></div>
-            <div class="lines"></div>
-            <div class="lines"></div>
+      <div>
+        <div class="page1">
+          <div class="left"> 
+            <h1>Hey I'm <span>Gundeep</span></h1>
+            <h2>I am an avid Electronics Enthusiast</h2>
+            <button>Resume</button>
+            <div class="scroll"> Scroll <i class="ri-arrow-down-circle-line"></i></div>
+            <div class="blur" id="blur_1"> </div>
+            <div class="blur"> </div>
+
           </div>
-          <div id="slider">
-            <div class="container_links">    
-            <div class="menus"><a href="#">Home</a></div>
-            <div class="menus"><a href="#">Projects</a></div>
-            <div class="menus"><a href="#">About</a></div>
-            <div class="menus"><a href="#">Contact</a></div></div>
+          <div class="right">
+            <img src="assets/arduino_di_final.png" alt="">
           </div>
         </div>
-      </nav>
+      </div>
+
+      <div class="page2"></div>
     </div>
 
     <script
