added project page

--- a/index.html
+++ b/index.html
@@ -21,39 +21,128 @@
           <div class="quick-links"><a href="#" class="links">Contact</a></div>
         </div>
         <div id="slider">
-          <div class="container_links">    
-          <div class="menus"><a href="#">Home</a></div>
-          <div class="menus"><a href="#">Projects</a></div>
-          <div class="menus"><a href="#">About</a></div>
-          <div class="menus"><a href="#">Contact</a></div></div>
+          <div class="container_links">
+            <div class="menus"><a href="#">Home</a></div>
+            <div class="menus"><a href="#">Projects</a></div>
+            <div class="menus"><a href="#">About</a></div>
+            <div class="menus"><a href="#">Contact</a></div>
+          </div>
         </div>
         <div class="lines_container">
           <div class="lines"></div>
           <div class="lines"></div>
           <div class="lines"></div>
         </div>
-        
       </nav>
-
       <div>
         <div class="page1">
-          <div class="left"> 
+          <div class="left">
             <h1>Hey I'm <span>Gundeep</span></h1>
             <h2>I am an avid Electronics Enthusiast</h2>
             <button>Resume</button>
-            <div class="scroll"> Scroll <i class="ri-arrow-down-circle-line"></i></div>
-            <div class="blur" id="blur_1"> </div>
-            <div class="blur"> </div>
+            <div class="scroll">Scroll</div>
+            <div id="blur_1"></div>
 
+            <div id="blur_2"></div>
           </div>
           <div class="right">
-            <img src="assets/arduino_di_final.png" alt="">
+            <img src="assets/arduino_di_final.png" alt="" />
           </div>
         </div>
       </div>
-
-      <div class="page2"></div>
+      <div class="scroll_down">Scroll</div>
+      <div class="img_container">
+        <img
+          src="https://images.unsplash.com/photo-1486611367184-17759508999c?q=80&w=3173&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt=""
+          class="image_round"
+          id="img1"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1583199873815-b58ce30591ea?q=80&w=3131&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt=""
+          class="image_round"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1555589228-135c25ae8cf5?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt=""
+          class="image_round"
+          id="img2"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1518770660439-4636190af475?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt=""
+          class="image_round"
+        />
+      </div>
     </div>
+    <!-- page2 -->
+    <div class="page2">
+      <!-- heading -->
+      <div class="project_container">
+        <div class="project"><i class="ri-projector-2-fill"></i>PROJECTS</div>
+      </div>
+      <!-- heading ends -->
+
+      <div class="real_project_cont">
+
+        <div class="pro_photo_container" id="pro_photo_container1">
+          <div class="pro_photos">
+            <img
+              src="/assets/project_img/not-gatef.png"
+              alt=""
+              class="info_pro_img"
+            />
+            <div class="info_pro">Not-Gate using BJT</div>
+          </div>
+          <div class="pro_photos">
+            <img
+              src="/assets/project_img/voltage_indic.png"
+              alt=""
+              class="info_pro_img"
+            />
+            <div class="info_pro">Voltage Indicator</div>
+          </div>
+        </div>
+        <div class="pro_photo_container" id="pro_photo_container2">
+          <div class="pro_photos">
+            <img
+              src="/assets/project_img/togglefinal.png"
+              alt=""
+              class="info_pro_img"
+            />
+            <div class="info_pro">Toggle Switch</div>
+          </div>
+          <div class="pro_photos">
+            <img
+              src="/assets/project_img/led-pattern-fin.png"
+              alt=""
+              class="info_pro_img"
+            />
+            <div class="info_pro">Led Pattern</div>
+          </div>
+        </div>
+        <div class="pro_photo_container" id="pro_photo_container3">
+          <div class="pro_photos">
+            <img
+              src="/assets/project_img/joystick-final.png"
+              alt=""
+              class="info_pro_img"
+            />
+            <div class="info_pro">Joystick controlled Servo</div>
+          </div>
+          <div class="pro_photos">
+            <img
+              src="/assets/project_img/dimmer-final.png"
+              alt=""
+              class="info_pro_img"
+            />
+            <div class="info_pro">Led Dimmer(PWM)</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- page2ends -->
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"
