added about section

--- a/index.html
+++ b/index.html
@@ -145,6 +145,30 @@
     <!-- page2ends -->
 
 <div class="page3">
+  <div class="project_container">
+    <div class="about"><i class="ri-quill-pen-fill"></i>About Me</div>
+  </div>
+  <div class="about_content_container">
+    <img src="assets/project_img/gundeep_final.png" alt="" class="my_img">
+    <div class="about_content">
+      <div id="initials">
+        I am <span class="jatt">Gundeep Singh.</span>
+      </div>
+      <br />
+      I am really interested in micro controllers and their working on the
+      basic level. I am planning to do a degree in the same and in future
+      would like to pursue a career in the electronics industry.
+      <!-- <br />
+      <br /> -->
+      Fitness is my hobby. I also like to code.I coded this website by myself. It is my first ever web project.
+<br><br>
+      <div class="per">Personality: Introvert</div>
+      <div class="per">Experience: None</div>
+      <div class="per">Fav_Food: Mango</div>
+    </div>
+  </div>
+</div>
+<div class="page4">
   
 </div>
     <script
