made whole website

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
     />
   </head>
   <body>
-    <div id="main">
+    <div id="home">
       <nav>
         <div id="logo">Gundeep Singh</div>
         <div class="menu">
-          <div class="quick-links"><a href="#" class="links">Home</a></div>
-          <div class="quick-links"><a href="#" class="links">Projects</a></div>
-          <div class="quick-links"><a href="#" class="links">About</a></div>
-          <div class="quick-links"><a href="#" class="links">Contact</a></div>
+          <div class="quick-links"><a href="#home" class="links">Home</a></div>
+          <div class="quick-links"><a href="#projects" class="links">Projects</a></div>
+          <div class="quick-links"><a href="#about" class="links">About</a></div>
+          <div class="quick-links"><a href="#contact" class="links">Contact</a></div>
         </div>
         <div id="slider">
           <div class="container_links">
-            <div class="menus"><a href="#">Home</a></div>
-            <div class="menus"><a href="#">Projects</a></div>
-            <div class="menus"><a href="#">About</a></div>
-            <div class="menus"><a href="#">Contact</a></div>
+            <div class="menus"><a href="#home">Home</a></div>
+            <div class="menus"><a href="#projects">Projects</a></div>
+            <div class="menus"><a href="#about">About</a></div>
+            <div class="menus"><a href="#contact">Contact</a></div>
           </div>
         </div>
         <div class="lines_container">
@@ -77,7 +77,7 @@
       </div>
     </div>
     <!-- page2 -->
-    <div class="page2">
+    <div class="page2" id="projects">
       <!-- heading -->
       <div class="project_container">
         <div class="project"><i class="ri-projector-2-fill"></i>PROJECTS</div>
@@ -144,7 +144,7 @@
     </div>
     <!-- page2ends -->
 
-<div class="page3">
+<div class="page3" id="about">
   <div class="project_container">
     <div class="about"><i class="ri-quill-pen-fill"></i>About Me</div>
   </div>
@@ -168,8 +168,39 @@
     </div>
   </div>
 </div>
-<div class="page4">
-  
+<div class="page4" id="contact">
+    <div class="contact_label"><i class="ri-article-line"></i>Contact Me</div>
+  <div class="left_right_container">
+    <div class="left4">
+      <div class="socials_card">
+        <div class="social_icons"><i class="ri-github-fill"></i></div>
+        <div class="social_icons"><i class="ri-instagram-fill"></i></div>
+        <div class="social_icons"><i class="ri-linkedin-box-fill"></i></div>
+      </div>
+    </div>
+    <div class="right4">
+      <div class="mail"><i class="ri-mail-fill"></i>gdsidhu07@icloud.com</div>
+      <div class="phone"><i class="ri-phone-fill"></i>+91 0123456789</div>
+    </div>
+  </div>
+
+
+</div>
+<div id="footer_container" >
+  <div class="footer_box1"><div class="portfolio">Personal Portfolio</div></div>
+  <div class="footer_box2">
+    <div class="this">
+      <span id="maut">This is my Personal Portfolio.</span>I personally learned a lot while designing and coding it.
+    </div>
+    <div class="this"
+      >This is my first attempt but will not be the last.</div>
+    <div class="this">I will definitely try to improve on it.</div>
+    <div class="this">Untill next time, see ya!</div>
+  </div>
+  <div class="footer_box3">
+    <br>
+    <span class="line"></span>
+  </div>
 </div>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"
