--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="left">
             <h1>Hey I'm <span>Gundeep</span></h1>
             <h2>I am an avid Electronics Enthusiast</h2>
-            <button>Resume</button>
+            <button onclick="open_resume()">Resume</button>
             <div class="scroll">Scroll</div>
             <div id="blur_1"></div>
 
@@ -173,9 +173,9 @@
   <div class="left_right_container">
     <div class="left4">
       <div class="socials_card">
-        <div class="social_icons"><i class="ri-github-fill"></i></div>
-        <div class="social_icons"><i class="ri-instagram-fill"></i></div>
-        <div class="social_icons"><i class="ri-linkedin-box-fill"></i></div>
+        <a class="social_icons" href="https://github.com/gdsidhu/My-Personal_website-2" target="_blank"><i class="ri-github-fill" ></i></a>
+        <a class="social_icons" href="https://www.instagram.com" target="_blank"><i class="ri-instagram-fill"></i></a>
+        <a class="social_icons" href="https://in.linkedin.com" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
       </div>
     </div>
     <div class="right4">
