changed png to webp

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="pro_photo_container" id="pro_photo_container1">
           <div class="pro_photos">
             <img
-              src="/assets/project_img/not-gatef.png"
+              src="/assets/project_img/not-gatef.webp"
               alt=""
               class="info_pro_img"
             />
@@ -97,7 +97,7 @@
           </div>
           <div class="pro_photos">
             <img
-              src="/assets/project_img/voltage_indic.png"
+              src="/assets/project_img/voltage_indic.webp"
               alt=""
               class="info_pro_img"
             />
@@ -107,7 +107,7 @@
         <div class="pro_photo_container" id="pro_photo_container2">
           <div class="pro_photos">
             <img
-              src="/assets/project_img/togglefinal.png"
+              src="/assets/project_img/togglefinal.webp"
               alt=""
               class="info_pro_img"
             />
@@ -115,7 +115,7 @@
           </div>
           <div class="pro_photos">
             <img
-              src="/assets/project_img/led-pattern-fin.png"
+              src="/assets/project_img/led-pattern-fin.webp"
               alt=""
               class="info_pro_img"
             />
@@ -125,7 +125,7 @@
         <div class="pro_photo_container" id="pro_photo_container3">
           <div class="pro_photos">
             <img
-              src="/assets/project_img/joystick-final.png"
+              src="/assets/project_img/joystick-final.webp"
               alt=""
               class="info_pro_img"
             />
@@ -133,7 +133,7 @@
           </div>
           <div class="pro_photos">
             <img
-              src="/assets/project_img/dimmer-final.png"
+              src="/assets/project_img/dimmer-final.webp"
               alt=""
               class="info_pro_img"
             />
