added linkden link

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <div class="socials_card">
         <a class="social_icons" href="https://github.com/gdsidhu/My-Personal_website-2" target="_blank"><i class="ri-github-fill" ></i></a>
         <a class="social_icons" href="https://www.instagram.com" target="_blank"><i class="ri-instagram-fill"></i></a>
-        <a class="social_icons" href="https://in.linkedin.com" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
+        <a class="social_icons" href="https://www.linkedin.com/in/gundeep-singh-sidhu-b954502a9/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
       </div>
     </div>
     <div class="right4">
