--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
         <div id="logo">Gundeep Singh</div>
         <div class="menu">
           <div class="quick-links"><a href="#home" class="links">Home</a></div>
-          <div class="quick-links"><a href="#projects" class="links">Projects</a></div>
-          <div class="quick-links"><a href="#about" class="links">About</a></div>
-          <div class="quick-links"><a href="#contact" class="links">Contact</a></div>
+          <div class="quick-links">
+            <a href="#projects" class="links">Projects</a>
+          </div>
+          <div class="quick-links">
+            <a href="#about" class="links">About</a>
+          </div>
+          <div class="quick-links">
+            <a href="#contact" class="links">Contact</a>
+          </div>
         </div>
         <div id="slider">
           <div class="container_links">
@@ -85,7 +91,6 @@
       <!-- heading ends -->
 
       <div class="real_project_cont">
-
         <div class="pro_photo_container" id="pro_photo_container1">
           <div class="pro_photos">
             <img
@@ -144,64 +149,82 @@
     </div>
     <!-- page2ends -->
 
-<div class="page3" id="about">
-  <div class="project_container">
-    <div class="about"><i class="ri-quill-pen-fill"></i>About Me</div>
-  </div>
-  <div class="about_content_container">
-    <img src="assets/project_img/gundeep_final.png" alt="" class="my_img">
-    <div class="about_content">
-      <div id="initials">
-        I am <span class="jatt">Gundeep Singh.</span>
+    <div class="page3" id="about">
+      <div class="project_container">
+        <div class="about"><i class="ri-quill-pen-fill"></i>About Me</div>
       </div>
-      <br />
-      I am really interested in micro controllers and their working on the
-      basic level. I am planning to do a degree in the same and in future
-      would like to pursue a career in the electronics industry.
-      <!-- <br />
+      <div class="about_content_container">
+        <img src="assets/project_img/gundeep_final.png" alt="" class="my_img" />
+        <div class="about_content">
+          <div id="initials">I am <span class="jatt">Gundeep Singh.</span></div>
+          <br />
+          I am really interested in micro controllers and their working on the
+          basic level. I am planning to do a degree in the same and in future
+          would like to pursue a career in the electronics industry.
+          <!-- <br />
       <br /> -->
-      Fitness is my hobby. I also like to code.I coded this website by myself. It is my first ever web project.
-<br><br>
-      <div class="per">Personality: Introvert</div>
-      <div class="per">Experience: None</div>
-      <div class="per">Fav_Food: Mango</div>
-    </div>
-  </div>
-</div>
-<div class="page4" id="contact">
-    <div class="contact_label"><i class="ri-article-line"></i>Contact Me</div>
-  <div class="left_right_container">
-    <div class="left4">
-      <div class="socials_card">
-        <a class="social_icons" href="https://github.com/gdsidhu/My-Personal_website-2" target="_blank"><i class="ri-github-fill" ></i></a>
-        <a class="social_icons" href="https://www.instagram.com" target="_blank"><i class="ri-instagram-fill"></i></a>
-        <a class="social_icons" href="https://www.linkedin.com/in/gundeep-singh-sidhu-b954502a9/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
+          Fitness is my hobby. I also like to code.I coded this website by
+          myself. It is my first ever web project.
+          <br /><br />
+          <div class="per">Personality: Introvert</div>
+          <div class="per">Experience: None</div>
+          <div class="per">Fav_Food: Mango</div>
+        </div>
       </div>
     </div>
-    <div class="right4">
-      <div class="mail"><i class="ri-mail-fill"></i>gdsidhu07@icloud.com</div>
-      <div class="phone"><i class="ri-phone-fill"></i>+91 0123456789</div>
+    <div class="page4" id="contact">
+      <div class="contact_label"><i class="ri-article-line"></i>Contact Me</div>
+      <div class="left_right_container">
+        <div class="left4">
+          <div class="socials_card">
+            <a
+              class="social_icons"
+              href="https://github.com/gdsidhu/My-Personal_website-2"
+              target="_blank"
+              ><i class="ri-github-fill"></i
+            ></a>
+            <a
+              class="social_icons"
+              href="https://www.instagram.com"
+              target="_blank"
+              ><i class="ri-instagram-fill"></i
+            ></a>
+            <a
+              class="social_icons"
+              href="https://www.linkedin.com/in/gundeep-singh-sidhu-b954502a9/"
+              target="_blank"
+              ><i class="ri-linkedin-box-fill"></i
+            ></a>
+          </div>
+        </div>
+        <div class="right4">
+          <div class="mail">
+            <i class="ri-mail-fill"></i>gdsidhu07@icloud.com
+          </div>
+          <div class="phone"><i class="ri-phone-fill"></i>+91 0123456789</div>
+        </div>
+      </div>
     </div>
-  </div>
-
-
-</div>
-<div id="footer_container" >
-  <div class="footer_box1"><div class="portfolio">Personal Portfolio</div></div>
-  <div class="footer_box2">
-    <div class="this">
-      <span id="maut">This is my Personal Portfolio.</span>I personally learned a lot while designing and coding it.
+    <div id="footer_container">
+      <div class="footer_box1">
+        <div class="portfolio">Personal Portfolio</div>
+      </div>
+      <div class="footer_box2">
+        <div class="this">
+          <span id="maut">This is my Personal Portfolio.</span>I personally
+          learned a lot while designing and coding it.
+        </div>
+        <div class="this">
+          This is my first attempt but will not be the last.
+        </div>
+        <div class="this">I will definitely try to improve on it.</div>
+        <div class="this">Untill next time, see ya!</div>
+      </div>
+      <div class="footer_box3">
+        <br />
+        <span class="line"></span>
+      </div>
     </div>
-    <div class="this"
-      >This is my first attempt but will not be the last.</div>
-    <div class="this">I will definitely try to improve on it.</div>
-    <div class="this">Untill next time, see ya!</div>
-  </div>
-  <div class="footer_box3">
-    <br>
-    <span class="line"></span>
-  </div>
-</div>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"
       integrity="sha512-EZI2cBcGPnmR89wTgVnN3602Yyi7muWo8y1B3a8WmIv1J9tYG+udH4LvmYjLiGp37yHB7FfaPBo8ly178m9g4Q=="
