--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div id="blur_2"></div>
           </div>
           <div class="right">
-            <img src="assets/arduino_di_final.png" alt="" />
+            <img src="assets/arduino_di_final.webp" alt="" />
           </div>
         </div>
       </div>
