--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       </div>
     </div>
     <div class="page4" id="contact">
-      <div class="jatt"><div class="contact_label"><i class="ri-article-line"></i>Contact Me</div></div>
+      <div class="jatt1"><div class="contact_label"><i class="ri-article-line"></i>Contact Me</div></div>
       <div class="left_right_container">
         <div class="left4">
           <div class="socials_card">
