--- a/index.html
+++ b/index.html
@@ -154,6 +154,8 @@
       <div class="project_container">
         <div class="about"><i class="ri-quill-pen-fill"></i>About Me</div>
       </div>
+      <img src="./assets/arrow.png" alt="" class="side_img1">
+
       <div class="about_content_container">
         <img src="assets/project_img/gundeep_final.png" alt="" class="my_img" />
         <div class="about_content">
