first to second

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           learned a lot while designing and coding it.
         </div>
         <div class="this">
-          This is my first attempt but will not be the last.
+          This is my second attempt but will not be the last.
         </div>
         <div class="this">I will definitely try to improve on it.</div>
         <div class="this">Untill next time, see ya!</div>
