--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
   <body>
     <div id="home">
       <nav>
-        <div id="logo">Gundeep Singh</div>
+        <div class="something">
+          <img src="./assets/jattDaLogosvg.svg" alt="">
+          <div id="logo">Gundeep<br>Singh</div>
+        </div>
+        
         <div class="menu">
           <div class="quick-links"><a href="#home" class="links">Home</a></div>
           <div class="quick-links">
@@ -158,7 +162,7 @@
       <img src="./assets/arrow.png" alt="" class="side_img1">
 
       <div class="about_content_container">
-        <img src="assets/project_img/gundeep_final.png" alt="" class="my_img" />
+        <img src="assets/project_img/gundeep_final.png" alt=""class="my_img" />
         <div class="about_content">
           <div id="initials">I am <span class="jatt">Gundeep Singh.</span></div>
           <br />
