--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="home">
       <nav>
         <div class="something">
-          <img src="./assets/jattDaLogosvg.svg" alt="">
+          <img src="./assets/jattDaLogosvg.svg" alt="" id="jatt4">
           <div id="logo">Gundeep<br>Singh</div>
         </div>
         
