--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav>
         <div class="something">
           <img src="./assets/jattDaLogosvg.svg" alt="" id="jatt4">
-          <div id="logo">Gundeep<br>Singh</div>
+          <div id="logo">Gundeep<br> &#160Singh</div>
         </div>
         
         <div class="menu">
