--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <body>
     <div id="home">
       <nav>
-        <div class="something">
+        <a class="something" href="#home">
           <img src="./assets/jattDaLogosvg.svg" alt="" id="jatt4">
           <div id="logo">Gundeep<br> &#160Singh</div>
-        </div>
+        </a>
         
         <div class="menu">
           <div class="quick-links"><a href="#home" class="links">Home</a></div>
