learned how to add svg

--- a/index.html
+++ b/index.html
@@ -15,7 +15,53 @@
     <div id="home">
       <nav>
         <a class="something" href="#home">
-          <img src="./assets/jattDaLogosvg.svg" alt="" id="jatt4">
+          <!-- <img src="./assets/jattDaLogosvg.svg" alt="" id="jatt4"> -->
+          <svg id="jatt4" width="96" height="96" viewBox="0 0 96 96" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g id="jattDaLogosvg 1">
+            <path id="dot2" d="M88.6378 73.9531C89.8323 73.9531 90.8006 73.0252 90.8006 71.8805C90.8006 70.7358 89.8323 69.8078 88.6378 69.8078C87.4433 69.8078 86.475 70.7358 86.475 71.8805C86.475 73.0252 87.4433 73.9531 88.6378 73.9531Z" fill="#737373" stroke="black" stroke-width="0.681269" stroke-linecap="square" stroke-linejoin="bevel"/>
+            <g id="background_display">
+            <path id="shape0" d="M93.504 17.1807H51.6907V78.8193H93.504V17.1807Z" fill="#404040" stroke="black" stroke-width="1.8023" stroke-linecap="square" stroke-linejoin="bevel"/>
+            <path id="shape17" d="M46.464 16.896H4.608V79.296H46.464V16.896Z" fill="#404040" stroke="black" stroke-width="1.536" stroke-linecap="square" stroke-linejoin="bevel"/>
+            </g>
+            <g id="empty_segments">
+            <path id="shape10" d="M82.3389 43.5746L83.1332 27.3333L85.8736 24.6628L87.9998 27.3696L87.427 43.4861L84.7692 46.2914L82.3389 43.5746Z" stroke="black" stroke-width="0.681269" stroke-linecap="square" stroke-linejoin="bevel"/>
+            <path id="shape13" d="M59.9812 48.3605C59.2566 48.3827 58.3412 50.0636 57.6383 50.7936C57.3409 55.795 56.9444 62.4634 56.647 67.4648C57.3229 68.2488 58.224 69.2942 58.8999 70.0782C59.6839 69.4023 60.7292 68.5011 61.5132 67.8253C61.8106 62.7969 62.2071 56.0923 62.5045 51.0639C61.8016 50.2529 60.8387 48.3341 59.9812 48.3605Z" stroke="black" stroke-width="0.681269" stroke-linecap="square" stroke-linejoin="bevel"/>
+            <path id="shape22" d="M10.5217 51.3869L9.70716 68.2895L11.9473 70.8691L14.5947 68.4253L15.4771 51.4547L13.1013 49.011C13.1013 49.011 12.2414 49.8029 10.5217 51.3869Z" stroke="black" stroke-width="0.72576" stroke-linecap="square" stroke-linejoin="bevel"/>
+            </g>
+            <g id="segments">
+            <path id="shape9" fill-rule="evenodd" clip-rule="evenodd" d="M58.7622 27.0072L57.8701 43.4471L60.0366 46.1234L62.8403 43.8295L63.8599 27.7718V27.0072L61.4385 24.8406L58.7622 27.0072Z" fill="#FF0000" stroke="black" stroke-width="0.681269" stroke-linecap="square" stroke-linejoin="bevel"/>
+            <path id="shape11" fill-rule="evenodd" clip-rule="evenodd" d="M61.4231 47.2791L63.8562 45.0262L81.0681 44.9361L83.1408 47.2791L80.8879 49.8023H63.5858L61.4231 47.2791Z" fill="#FF0000" stroke="black" stroke-width="0.681269" stroke-linecap="square" stroke-linejoin="bevel"/>
+            <path id="shape12" fill-rule="evenodd" clip-rule="evenodd" d="M62.8649 23.4887C62.8853 22.7124 64.6312 21.7225 65.3881 20.9655C70.4977 20.9925 77.3104 21.0286 82.4199 21.0556C83.0417 21.7585 83.8707 22.6957 84.4925 23.3986C83.8437 24.1015 82.9786 25.0387 82.3298 25.7416C77.2473 25.8227 70.4706 25.9308 65.3881 26.012C64.5501 25.2009 62.8487 24.1042 62.8649 23.4887Z" fill="#FF0000" stroke="black" stroke-width="0.681269" stroke-linecap="square" stroke-linejoin="bevel"/>
+            <path id="shape14" fill-rule="evenodd" clip-rule="evenodd" d="M81.8792 50.9738L81.1583 67.6451L83.321 69.8979L86.0245 67.7352L86.8355 50.9738L84.4024 48.3605C84.4024 48.8411 83.5613 49.7122 81.8792 50.9738Z" fill="#FF0000" stroke="black" stroke-width="0.681269" stroke-linecap="square" stroke-linejoin="bevel"/>
+            <path id="shape15" fill-rule="evenodd" clip-rule="evenodd" d="M60.2516 71.1595L62.6847 68.8166L79.7164 68.9067L81.8792 71.2497L79.7164 73.3223L62.4143 73.5926C62.4143 73.5926 61.6934 72.7816 60.2516 71.1595Z" fill="#FF0000" stroke="black" stroke-width="0.681269" stroke-linecap="square" stroke-linejoin="bevel"/>
+            <path id="shape18" fill-rule="evenodd" clip-rule="evenodd" d="M15.8166 23.5551L18.2603 21.1114L35.5024 21.1793L37.9462 23.623L35.6382 25.931L18.1246 26.0668C18.1246 26.0668 17.3552 25.2296 15.8166 23.5551Z" fill="#FF0000" stroke="black" stroke-width="0.72576" stroke-linecap="square" stroke-linejoin="bevel"/>
+            <path id="shape19" fill-rule="evenodd" clip-rule="evenodd" d="M11.8115 27.1529L14.5268 24.8449L16.7669 27.2887L15.8844 43.852L13.3728 46.703L10.8612 44.1234C10.8612 44.1234 11.1779 38.4666 11.8115 27.1529Z" fill="#FF0000" stroke="black" stroke-width="0.72576" stroke-linecap="square" stroke-linejoin="bevel"/>
+            <path id="shape20" fill-rule="evenodd" clip-rule="evenodd" d="M36.4528 27.2208L35.7061 44.1234L37.8783 46.6352L40.7293 44.1913L41.6797 27.2208L39.2359 24.777C39.2359 24.777 38.3082 25.5916 36.4528 27.2208Z" fill="#FF0000" stroke="black" stroke-width="0.72576" stroke-linecap="square" stroke-linejoin="bevel"/>
+            <path id="shape21" fill-rule="evenodd" clip-rule="evenodd" d="M14.4589 48L17.0384 45.4132L34.3484 45.4811L36.5885 48L34.2805 50.2329L16.699 50.165C16.699 50.165 15.9523 49.4433 14.4589 48Z" fill="#FF0000" stroke="black" stroke-width="0.72576" stroke-linecap="square" stroke-linejoin="bevel"/>
+            <path id="shape23" fill-rule="evenodd" clip-rule="evenodd" d="M35.3667 51.319L34.3484 68.2216L36.7243 70.6654L39.2359 68.2895L40.1863 51.2511L37.8104 48.9431C37.8104 48.9431 36.9958 49.7351 35.3667 51.319Z" fill="#FF0000" stroke="black" stroke-width="0.72576" stroke-linecap="square" stroke-linejoin="bevel"/>
+            <path id="shape24" fill-rule="evenodd" clip-rule="evenodd" d="M13.3049 71.9552L15.8166 69.4435H32.9908L35.2988 71.8873L32.9229 74.3311L15.4093 74.3989C15.4093 74.3989 14.7078 73.5844 13.3049 71.9552Z" fill="#FF0000" stroke="black" stroke-width="0.72576" stroke-linecap="square" stroke-linejoin="bevel"/>
+            </g>
+            <path id="dot1" d="M42.048 74.496C43.2144 74.496 44.16 73.5934 44.16 72.48C44.16 71.3666 43.2144 70.464 42.048 70.464C40.8816 70.464 39.936 71.3666 39.936 72.48C39.936 73.5934 40.8816 74.496 42.048 74.496Z" fill="#737373" stroke="black" stroke-width="0.72576" stroke-linecap="square" stroke-linejoin="bevel"/>
+            <g id="bridges">
+            <path id="shape1" d="M51.3302 19.1632H46.464V21.1457H51.3302V19.1632Z" fill="black" stroke="black" stroke-width="0.681269" stroke-linecap="square" stroke-linejoin="bevel"/>
+            <path id="shape2" d="M51.5104 25.8317H46.6442V28.3549H51.5104V25.8317Z" fill="black" stroke="black" stroke-width="0.681269" stroke-linecap="square" stroke-linejoin="bevel"/>
+            <path id="shape3" d="M51.15 33.7618H46.6442V36.1048H51.15V33.7618Z" fill="black" stroke="black" stroke-width="0.681269" stroke-linecap="square" stroke-linejoin="bevel"/>
+            <path id="shape4" d="M50.0726 42.2326H45.9274V44.5756H50.0726V42.2326Z" fill="black" stroke="black" stroke-width="0.681269" stroke-linecap="square" stroke-linejoin="bevel"/>
+            <path id="shape5" d="M51.15 50.7034H47.1849V52.8662H51.15V50.7034Z" fill="black" stroke="black" stroke-width="0.681269" stroke-linecap="square" stroke-linejoin="bevel"/>
+            <path id="shape6" d="M51.3302 58.4533H46.8245V60.7963H51.3302V58.4533Z" fill="black" stroke="black" stroke-width="0.681269" stroke-linecap="square" stroke-linejoin="bevel"/>
+            <path id="shape7" d="M51.15 66.2032H46.6442V68.7264H51.15V66.2032Z" fill="black" stroke="black" stroke-width="0.681269" stroke-linecap="square" stroke-linejoin="bevel"/>
+            <path id="shape8" d="M51.15 73.2322H46.464V75.5752H51.15V73.2322Z" fill="black" stroke="black" stroke-width="0.681269" stroke-linecap="square" stroke-linejoin="bevel"/>
+            <path id="shape26" d="M50.256 42.48L50.832 42.456" stroke="black" stroke-width="0.72576" stroke-miterlimit="2" stroke-linecap="square"/>
+            <path id="shape27" d="M49.992 43.104L51.264 43.176" stroke="black" stroke-width="0.72576" stroke-miterlimit="2" stroke-linecap="square"/>
+            <path id="shape28" d="M50.088 43.416L51.216 43.512" stroke="black" stroke-width="0.72576" stroke-miterlimit="2" stroke-linecap="square"/>
+            <path id="shape29" d="M49.848 43.896L51.84 43.92" stroke="black" stroke-width="0.72576" stroke-miterlimit="2" stroke-linecap="square"/>
+            <path id="shape30" d="M50.16 44.04L51.12 44.184" stroke="black" stroke-width="0.72576" stroke-miterlimit="2" stroke-linecap="square"/>
+            <path id="shape31" d="M49.968 44.4H51.024" stroke="black" stroke-width="0.72576" stroke-miterlimit="2" stroke-linecap="square"/>
+            <path id="shape32" d="M50.136 42.18H50.784" stroke="black" stroke-width="0.72576" stroke-miterlimit="2" stroke-linecap="square"/>
+            <path id="shape33" d="M49.86 44.628L50.868 44.616" stroke="black" stroke-width="0.72576" stroke-miterlimit="2" stroke-linecap="square"/>
+            </g>
+            </g>
+            </svg>
           <div id="logo">Gundeep<br> &#160Singh</div>
         </a>
         
