added new image for about

--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@
       <img src="./assets/arrow.png" alt="" class="side_img1">
 
       <div class="about_content_container">
-        <img src="assets/project_img/gundeep_final.png" alt=""class="my_img" />
+        <img src="assets/project_img/gundeep_kurta_fin.webp" alt="" class="my_img" />
+        <!-- <img src="assets/project_img/gundeep_final.webp" alt=""class="my_img" /> -->
         <div class="about_content">
           <div id="initials">I am <span class="jatt">Gundeep Singh.</span></div>
           <br />
