--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           <!-- <br />
       <br /> -->
           Fitness is my hobby. I also like to code.I coded this website by
-          myself. It is my first ever web project.
+          myself. It is my second ever web project.
           <br /><br />
           <div class="per">Personality: Introvert</div>
           <div class="per">Experience: None</div>
