--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@
           Fitness is my hobby. I also like to code.I coded this website by
           myself. It is my second ever web project.
           <br /><br />
-          <div class="per">Personality: Introvert</div>
-          <div class="per">Experience: None</div>
-          <div class="per">Fav_Food: Mango</div>
+          <div class="per">Personality: <span class="yillow">Introvert</span></div>
+          <div class="per">Experience: <span class="yillow">None</span></div>
+          <div class="per">Fav_Food: <span class="yillow">Mango</span></div>
         </div>
       </div>
     </div>
