--- a/index.html
+++ b/index.html
@@ -234,21 +234,22 @@
           <div class="socials_card">
             <a
               class="social_icons"
+               id="icoon1"
               href="https://github.com/gdsidhu/My-Personal_website-2"
               target="_blank"
               ><i class="ri-github-fill"></i
             ></a>
             <a
-              class="social_icons"
+              class="social_icons" id="icoon2"
               href="https://www.instagram.com"
               target="_blank"
-              ><i class="ri-instagram-fill"></i
+              ><i class="ri-instagram-fill "></i
             ></a>
             <a
-              class="social_icons"
+              class="social_icons" id="icoon3"
               href="https://www.linkedin.com/in/gundeep-singh-sidhu-b954502a9/"
               target="_blank"
-              ><i class="ri-linkedin-box-fill"></i
+              ><i class="ri-linkedin-box-fill "></i
             ></a>
           </div>
         </div>
