--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             ></a>
             <a
               class="social_icons" id="icoon2"
-              href="https://www.instagram.com"
+              href="https://www.instagram.com/gd_sidhu07/"
               target="_blank"
               ><i class="ri-instagram-fill "></i
             ></a>
