--- a/index.html
+++ b/index.html
@@ -243,8 +243,10 @@
               class="social_icons" id="icoon2"
               href="https://www.instagram.com/gd_sidhu07/"
               target="_blank"
-              ><i class="ri-instagram-fill "></i
-            ></a>
+              >
+              <i class="ri-instagram-fill "></i>
+              <!-- <img src="assets/Instagram_icon.png" alt="" id="ig"> -->
+            </a>
             <a
               class="social_icons" id="icoon3"
               href="https://www.linkedin.com/in/gundeep-singh-sidhu-b954502a9/"
