--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
       </div>
     </div>
     <div id="footer_container">
+      <div class="circle-overlay"></div>
       <div class="footer_box1">
         <div class="portfolio">Personal Portfolio</div>
       </div>
@@ -282,7 +283,7 @@
         <br />
         <span class="line"></span>
       </div>
-    </div>
+  </div>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"
       integrity="sha512-EZI2cBcGPnmR89wTgVnN3602Yyi7muWo8y1B3a8WmIv1J9tYG+udH4LvmYjLiGp37yHB7FfaPBo8ly178m9g4Q=="
