--- a/index.html
+++ b/index.html
@@ -253,6 +253,14 @@
               target="_blank"
               ><i class="ri-linkedin-box-fill "></i
             ></a>
+            <a
+              class="social_icons" id="icoon4"
+              href="https://medium.com/@gdsidhu07"
+              target="_blank">
+              <i class="ri-medium-fill"></i>
+            </a>
+              
+            
           </div>
         </div>
         <div class="right4">
