--- a/index.html
+++ b/index.html
@@ -287,8 +287,9 @@
       </div>
       <div class="footer_box2">
         <div class="this">
-          <span id="maut">This is my Personal Portfolio.</span>I personally
-          learned a lot while designing and coding it.
+          <!-- <span id="maut">This is my Personal Portfolio.</span> -->
+          <!-- I personally -->
+          Learned a lot while designing and coding it.
         </div>
         <div class="this">
           This is my second attempt but will not be the last.
