--- a/index.html
+++ b/index.html
@@ -197,6 +197,11 @@
           </div>
         </div>
       </div>
+      <div class="more_projects">
+        <div class="more_projects_content">
+          Visit <a href="https://www.youtube.com/channel/UCRodTVNMhMex7km6FR-V4BA" id="yt">My Youtube Channel</a> for more project videos
+        </div>
+      </div>
     </div>
     <!-- page2ends -->
 
@@ -213,13 +218,9 @@
         <div class="about_content">
           <div id="initials">I am <span class="jatt">Gundeep Singh.</span></div>
           <br />
-          I am really interested in micro controllers and their working on the
-          basic level. I am planning to do a degree in the same and in future
-          would like to pursue a career in the electronics industry.
-          <!-- <br />
-      <br /> -->
-          Fitness is my hobby. I also like to code.I coded this website by
-          myself. It is my second ever web project.
+          I am really fascinated by the world of Electronics, trying to learn new things through various online resources and replicating projects with some of my own personal touch and creativity.These projects include use of Arduino(micro-controller), Gate chips and basic e-components.
+            <br>
+            Apart from this, I also try to keep myself fit through workouts and healthy eating on daily basis.
           <br /><br />
           <div class="per">Personality: <span class="yillow">Introvert</span></div>
           <div class="per">Experience: <span class="yillow">None</span></div>
