phone number update

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
           <div class="mail">
             <i class="ri-mail-fill"></i>gdsidhu07@icloud.com
           </div>
-          <div class="phone"><i class="ri-phone-fill"></i>+91 0123456789</div>
+          <div class="phone"><i class="ri-phone-fill"></i>+1 (204) 970-0286</div>
         </div>
       </div>
     </div>
