--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@
           <br />
           I am really fascinated by the world of Electronics, trying to learn new things through various online resources and replicating projects with some of my own personal touch and creativity.These projects include use of Arduino(micro-controller), Gate chips and basic e-components.
             <br>
-            Apart from this, I also try to keep myself fit through workouts and healthy eating on daily basis.
+            I am eager to apply this knowledge in real world and also learn new things while doing so. Moreover, I am also good at coding but usually prefer hardware side of things.
           <br /><br />
           <div class="per">Personality: <span class="yillow">Introvert</span></div>
-          <div class="per">Experience: <span class="yillow">None</span></div>
-          <div class="per">Fav_Food: <span class="yillow">Mango</span></div>
+          <div class="per">Experience: <span class="yillow">In Pursuit Of</span></div>
+          <div class="per">Fun_Fact: <span class="yillow">Sleeps a lot :)</span></div>
         </div>
       </div>
     </div>
@@ -293,10 +293,10 @@
           Learned a lot while designing and coding it.
         </div>
         <div class="this">
-          This is my second attempt but will not be the last.
+
         </div>
-        <div class="this">I will definitely try to improve on it.</div>
-        <div class="this">Untill next time, see ya!</div>
+        <!-- <div class="this">I will definitely try to improve on it.</div>
+        <div class="this">Untill next time, see ya!</div> -->
       </div>
       <div class="footer_box3">
         <br />
