--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             
             <a
               class="social_icons" id="icoon3"
-              href="https://www.linkedin.com/in/gundeep-singh-sidhu-b954502a9/"
+              href="https://www.linkedin.com/in/gundeep-sidhu"
               target="_blank"
               ><i class="ri-linkedin-box-fill "></i
             ></a>
